--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- This is a change, this is the link to the styelsheet -->
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
